# printfRTT

./: BLINKRTT.elf  BLINKRTT.hex  BLINKRTT.uf2  CMakeLists.txt  LICENSE  README.md  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c  add.c  add.h  blinkcl.c  uf2me.sh
